<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.UploadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upload_topnavbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/border_bottom"
        android:elevation="20dp"
        >
        <ImageButton
            android:id="@+id/upload_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:background="@color/white"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="14dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/upload_upload_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!--        PROGRESS BAR -->
        <ProgressBar
            android:id="@+id/upload_progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="40dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".main.UploadActivity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_topnavbox"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--        IMAGE-->
            <ImageView
                android:id="@+id/chooseImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:background="@color/yummy_light_brown"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
            <ImageView
                android:id="@+id/choosen_img_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/img_selector"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="@id/chooseImageView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/chooseImageView" />
            <TextView
                android:id="@+id/choosen_img_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_photo_of_your_recipe"
                android:textColor="@color/yummy_brown"
                android:fontFamily="@font/rubik_medium"
                android:textSize="20sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@id/choosen_img_img"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/chooseImageView" />
            <!--        /IMAGE-->

            <!--        TITLE-->
            <EditText
                android:id="@+id/upload_name_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_title"
                android:inputType="text"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/chooseImageView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <!--        INGREDIENTS-->
            <TextView
                android:id="@+id/upload_ingredients_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:textSize="20sp"
                android:text="@string/ingredients"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="22dp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_name_ed"
                app:layout_constraintRight_toRightOf="parent"
                />
            <EditText
                android:id="@+id/upload_ingredients_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_ingredients"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="10dp"
                android:inputType="textMultiLine"
                android:lines="4"
                android:minLines="4"
                android:gravity="top|start"
                android:maxLines="4"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@id/upload_ingredients_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/upload_diners_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_ingredients_ed"
                >
                <TextView
                    android:id="@+id/upload_diners_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diners"
                    android:textSize="16sp"
                    android:maxWidth="150dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/rubik"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <EditText
                    android:id="@+id/upload_diners_ed"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/ex_diners"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/upload_time_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_diners_box"
                >
                <TextView
                    android:id="@+id/upload_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preparation_time"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:maxWidth="150dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:fontFamily="@font/rubik"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <EditText
                    android:id="@+id/upload_time_ed"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingHorizontal="10dp"
                    android:hint="@string/ex_time"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <!--        /INGREDIENTS-->

            <!--        STEPS-->
            <TextView
                android:id="@+id/upload_steps_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:textSize="20sp"
                android:text="@string/steps"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="22dp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_time_box"
                app:layout_constraintRight_toRightOf="parent"
                />
            <EditText
                android:id="@+id/upload_description_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ex_description"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="10dp"
                android:inputType="textMultiLine"
                android:lines="6"
                android:minLines="6"
                android:gravity="top|start"
                android:maxLines="6"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@id/upload_steps_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <!--        /STEPS-->

            <!--        ADD TAG-->
            <TextView
                android:id="@+id/upload_add_tags_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:textSize="20sp"
                android:text="@string/add_tag"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="22dp"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_description_ed"
                app:layout_constraintRight_toRightOf="parent"
                />
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/upload_chipgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:paddingBottom="60dp"
                app:singleSelection="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_add_tags_title"
                app:layout_constraintRight_toRightOf="parent">
            </com.google.android.material.chip.ChipGroup>
            <!--        /ADD TAGS-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
