<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.profile.ProfileFragment">

    <ImageButton
        android:id="@+id/profile_options_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_menu"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    USER PROFILE IMG-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_user_image"
        android:src="@drawable/logo_yummy"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

<!--    RECIPES COUNT BOX-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_user_recipes_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="60dp"
        app:layout_constraintLeft_toRightOf="@id/profile_user_image"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/profile_user_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_medium"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploads"
            android:fontFamily="@font/rubik"
            app:layout_constraintTop_toBottomOf="@id/profile_user_recipes"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
<!--    RECIPES SAVED COUNT-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_user_recipes_saved_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toRightOf="@id/profile_user_recipes_box"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/profile_user_recipes_saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/black"
            android:fontFamily="@font/rubik_medium"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved"
            android:fontFamily="@font/rubik"
            app:layout_constraintTop_toBottomOf="@id/profile_user_recipes_saved"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="@font/rubik_medium"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_user_recipes_saved_box" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/profile_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:tabMode="fixed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_user_name" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/profile_view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_tab_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>